# Mathematical-Foundations-of-DNN

./: .gitignore  README.md  pyproject.toml
DNN-hw/week1/: conv1D.ipynb  conv1D.py
DNN-hw/week1/.ipynb_checkpoints/: conv1D-checkpoint.ipynb
DNN-hw/week2/: linearly_separable.py  logisticRegressionSGD.py  twolayerSGD.py
hw/week1/: Chapter 1 Code.ipynb  conv1D.py  tempCodeRunnerFile.py
week1/: conv1D.py  tempCodeRunnerFile.py  wideMinima.py
